<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <distributionManagement>
        <snapshotRepository>
            <id>attribyte-private-snapshot</id>
            <name>Attribyte Private Snapshot</name>
            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
            <uniqueVersion>true</uniqueVersion>
        </snapshotRepository>
        <repository>
            <id>attribyte-private-release</id>
            <name>Attribyte Private Release</name>
            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>attribyte-private-repo</id>
            <name>Attribyte Private Repo</name>
            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
        </repository>
    </repositories>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.attribyte</groupId>
    <artifactId>pompano</artifactId>
    <version>0.2.1</version>
    <packaging>jar</packaging>
    <name>Pompano Page Parsers</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jacksonVersion>2.21.0</jacksonVersion>
        <jacksonDatabindVersion>2.21.0</jacksonDatabindVersion>
    </properties>
    <description>
        Pompano is a suite of parsers for various feed and page formats.
    </description>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Matt Hamer</name>
            <email>matt@attribyte.com</email>
            <organization>Attribyte LLC</organization>
            <organizationUrl>https://www.attribyte.org/oss</organizationUrl>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:attribyte/pompano.git</connection>
        <developerConnection>scm:git:git@github.com:attribyte/pompano.git</developerConnection>
        <url>git@github.com:attribyte/pompano.git</url>
    </scm>
    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.5.0-jre</version>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.48.4</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>4.33.5</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.22.1</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.14.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jacksonVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jacksonDatabindVersion}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <showWarnings>true</showWarnings>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <source>1.8</source>
                    <target>1.8</target>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.4</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
